--- a/web-site/index.html
+++ b/web-site/index.html
@@ -15,11 +15,11 @@
         </div>
         <div step="result" style="display: none">
             <h1>Your thumbnail is ready</h1>
-            <a id="resultlink">download it</a>
+            <a id="resultLink">download it</a>
         </div>
         <div step="error" style="display: none">
             <h1>There was an error creating the thumbnail</h1>
-            <p id="errortext"></p>
+            <p id="errorText"></p>
         </div>
         <script src="user-workflow.js"></script>
     </body>
